# fastapi-prometheus-grafana

./: .env.example  .gitignore  README.md  docker-compose.yaml
.github/workflows/: checks.yml
app/: Dockerfile  logger.py  main.py  requirements.txt
grafana/: config.monitoring
monitoring/prometheus/: prometheus.yml
proxy/: Dockerfile  default.conf
src/: .dockerignore  Dockerfile  pyproject.toml
src/app/: db.py  dependencies.py  errors.py  logger.py  main.py  models.py  routes.py  schemas.py  settings.py
src/app/admin/: main.py  views.py
src/tests/: conftest.py  test_api.py
