[project]
name = "src"
version = "0.0.1"
description = "API to manage users data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "email-validator==2.3.0",
    "fastapi==0.116.1",
    "fastcrud>=0.16.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic>=2.11.7",
    "pydantic-settings==2.10.1",
    "sqladmin>=0.21.0",
    "sqlmodel>=0.0.24",
    "uvicorn==0.35.0",
]

[dependency-groups]
test = [
    "faker>=37.6.0",
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["monitoring", "assets", "src/.venv"]
files = "src/"

[tool.ruff]
target-version = "py312"
exclude = ["monitoring", "assets", "src/.venv"]
lint.extend-select = ["ALL"]
lint.ignore = [
  "D100",
  "D104",
  "UP040",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103", "INP001", "S101"]
